lab6/y.output
State 1 conflicts: 1 shift/reduce
State 28 conflicts: 1 shift/reduce
State 41 conflicts: 1 shift/reduce
State 43 conflicts: 1 shift/reduce
State 104 conflicts: 13 shift/reduce
State 105 conflicts: 12 shift/reduce
State 130 conflicts: 12 shift/reduce
State 131 conflicts: 12 shift/reduce
State 147 conflicts: 12 shift/reduce


Grammar

    0 $accept: program $end

    1 program: exp

    2 exp: LPAREN exp RPAREN
    3    | LPAREN expseq RPAREN
    4    | lvalue
    5    | NIL
    6    | INT
    7    | STRING
    8    | callexp
    9    | opexp
   10    | recordexp
   11    | arrayexp
   12    | assignexp
   13    | ifexp
   14    | whileexp
   15    | forexp
   16    | BREAK
   17    | letexp
   18    | LPAREN RPAREN

   19 expseq: exp SEMICOLON expseq
   20       | exp

   21 explist: exp COMMA explist
   22        | exp

   23 lvalue: ID
   24       | lvalue DOT ID
   25       | lvalue LBRACK exp RBRACK
   26       | ID LBRACK exp RBRACK

   27 callexp: ID LPAREN RPAREN
   28        | ID LPAREN explist RPAREN

   29 opexp: exp PLUS exp
   30      | exp MINUS exp
   31      | exp TIMES exp
   32      | exp DIVIDE exp
   33      | exp EQ exp
   34      | exp NEQ exp
   35      | exp LT exp
   36      | exp LE exp
   37      | exp GT exp
   38      | exp GE exp
   39      | exp AND exp
   40      | exp OR exp
   41      | MINUS exp

   42 recordexp: ID LBRACE rec RBRACE
   43          | ID LBRACE RBRACE

   44 rec: rec_one COMMA rec
   45    | rec_one

   46 rec_one: ID EQ exp

   47 arrayexp: ID LBRACK exp RBRACK OF exp

   48 assignexp: lvalue ASSIGN exp

   49 ifexp: IF exp THEN exp ELSE exp
   50      | IF exp THEN exp

   51 whileexp: WHILE exp DO exp

   52 forexp: FOR ID ASSIGN exp TO exp DO exp

   53 letexp: LET decs IN expseq END

   54 decs: dec decs
   55     | /* empty */

   56 dec: vardec
   57    | fundecs
   58    | tydecs

   59 vardec: VAR ID ASSIGN exp
   60       | VAR ID COLON ID ASSIGN exp

   61 fundecs: fundec fundecs
   62        | fundec

   63 fundec: FUNCTION ID LPAREN tyfields RPAREN EQ exp
   64       | FUNCTION ID LPAREN tyfields RPAREN COLON ID EQ exp

   65 tydecs: tydec tydecs
   66       | tydec

   67 tydec: TYPE ID EQ ty

   68 ty: ID
   69   | LBRACE tyfields RBRACE
   70   | ARRAY OF ID

   71 tyfields: /* empty */
   72         | tyfields_nonempty

   73 tyfields_nonempty: field COMMA tyfields_nonempty
   74                  | field

   75 field: ID COLON ID


Terminals, with rules where they appear

$end (0) 0
error (256)
ID (258) 23 24 26 27 28 42 43 46 47 52 59 60 63 64 67 68 70 75
STRING (259) 7
INT (260) 6
COMMA (261) 21 44 73
COLON (262) 60 64 75
SEMICOLON (263) 19
LPAREN (264) 2 3 18 27 28 63 64
RPAREN (265) 2 3 18 27 28 63 64
LBRACK (266) 25 26 47
RBRACK (267) 25 26 47
LBRACE (268) 42 43 69
RBRACE (269) 42 43 69
DOT (270) 24
PLUS (271) 29
MINUS (272) 30 41
TIMES (273) 31
DIVIDE (274) 32
EQ (275) 33 46 63 64 67
NEQ (276) 34
LT (277) 35
LE (278) 36
GT (279) 37
GE (280) 38
AND (281) 39
OR (282) 40
ASSIGN (283) 48 52 59 60
ARRAY (284) 70
IF (285) 49 50
THEN (286) 49 50
ELSE (287) 49
WHILE (288) 51
FOR (289) 52
TO (290) 52
DO (291) 51 52
LET (292) 53
IN (293) 53
END (294) 53
OF (295) 47 70
BREAK (296) 16
NIL (297) 5
FUNCTION (298) 63 64
VAR (299) 59 60
TYPE (300) 67
UMINUS (301)


Nonterminals, with rules where they appear

$accept (47)
    on left: 0
program (48)
    on left: 1, on right: 0
exp (49)
    on left: 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18,
    on right: 1 2 19 20 21 22 25 26 29 30 31 32 33 34 35 36 37 38 39
    40 41 46 47 48 49 50 51 52 59 60 63 64
expseq (50)
    on left: 19 20, on right: 3 19 53
explist (51)
    on left: 21 22, on right: 21 28
lvalue (52)
    on left: 23 24 25 26, on right: 4 24 25 48
callexp (53)
    on left: 27 28, on right: 8
opexp (54)
    on left: 29 30 31 32 33 34 35 36 37 38 39 40 41,
    on right: 9
recordexp (55)
    on left: 42 43, on right: 10
rec (56)
    on left: 44 45, on right: 42 44
rec_one (57)
    on left: 46, on right: 44 45
arrayexp (58)
    on left: 47, on right: 11
assignexp (59)
    on left: 48, on right: 12
ifexp (60)
    on left: 49 50, on right: 13
whileexp (61)
    on left: 51, on right: 14
forexp (62)
    on left: 52, on right: 15
letexp (63)
    on left: 53, on right: 17
decs (64)
    on left: 54 55, on right: 53 54
dec (65)
    on left: 56 57 58, on right: 54
vardec (66)
    on left: 59 60, on right: 56
fundecs (67)
    on left: 61 62, on right: 57 61
fundec (68)
    on left: 63 64, on right: 61 62
tydecs (69)
    on left: 65 66, on right: 58 65
tydec (70)
    on left: 67, on right: 65 66
ty (71)
    on left: 68 69 70, on right: 67
tyfields (72)
    on left: 71 72, on right: 63 64 69
tyfields_nonempty (73)
    on left: 73 74, on right: 72 73
field (74)
    on left: 75, on right: 73 74


state 0

    0 $accept: . program $end

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    program    go to state 12
    exp        go to state 13
    lvalue     go to state 14
    callexp    go to state 15
    opexp      go to state 16
    recordexp  go to state 17
    arrayexp   go to state 18
    assignexp  go to state 19
    ifexp      go to state 20
    whileexp   go to state 21
    forexp     go to state 22
    letexp     go to state 23


state 1

   23 lvalue: ID .
   26       | ID . LBRACK exp RBRACK
   27 callexp: ID . LPAREN RPAREN
   28        | ID . LPAREN explist RPAREN
   42 recordexp: ID . LBRACE rec RBRACE
   43          | ID . LBRACE RBRACE
   47 arrayexp: ID . LBRACK exp RBRACK OF exp

    LPAREN  shift, and go to state 24
    LBRACK  shift, and go to state 25
    LBRACE  shift, and go to state 26

    LBRACK    [reduce using rule 23 (lvalue)]
    $default  reduce using rule 23 (lvalue)


state 2

    7 exp: STRING .

    $default  reduce using rule 7 (exp)


state 3

    6 exp: INT .

    $default  reduce using rule 6 (exp)


state 4

    2 exp: LPAREN . exp RPAREN
    3    | LPAREN . expseq RPAREN
   18    | LPAREN . RPAREN

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    RPAREN  shift, and go to state 27
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp        go to state 28
    expseq     go to state 29
    lvalue     go to state 14
    callexp    go to state 15
    opexp      go to state 16
    recordexp  go to state 17
    arrayexp   go to state 18
    assignexp  go to state 19
    ifexp      go to state 20
    whileexp   go to state 21
    forexp     go to state 22
    letexp     go to state 23


state 5

   41 opexp: MINUS . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp        go to state 30
    lvalue     go to state 14
    callexp    go to state 15
    opexp      go to state 16
    recordexp  go to state 17
    arrayexp   go to state 18
    assignexp  go to state 19
    ifexp      go to state 20
    whileexp   go to state 21
    forexp     go to state 22
    letexp     go to state 23


state 6

   49 ifexp: IF . exp THEN exp ELSE exp
   50      | IF . exp THEN exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp        go to state 31
    lvalue     go to state 14
    callexp    go to state 15
    opexp      go to state 16
    recordexp  go to state 17
    arrayexp   go to state 18
    assignexp  go to state 19
    ifexp      go to state 20
    whileexp   go to state 21
    forexp     go to state 22
    letexp     go to state 23


state 7

   51 whileexp: WHILE . exp DO exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp        go to state 32
    lvalue     go to state 14
    callexp    go to state 15
    opexp      go to state 16
    recordexp  go to state 17
    arrayexp   go to state 18
    assignexp  go to state 19
    ifexp      go to state 20
    whileexp   go to state 21
    forexp     go to state 22
    letexp     go to state 23


state 8

   52 forexp: FOR . ID ASSIGN exp TO exp DO exp

    ID  shift, and go to state 33


state 9

   53 letexp: LET . decs IN expseq END

    FUNCTION  shift, and go to state 34
    VAR       shift, and go to state 35
    TYPE      shift, and go to state 36

    $default  reduce using rule 55 (decs)

    decs     go to state 37
    dec      go to state 38
    vardec   go to state 39
    fundecs  go to state 40
    fundec   go to state 41
    tydecs   go to state 42
    tydec    go to state 43


state 10

   16 exp: BREAK .

    $default  reduce using rule 16 (exp)


state 11

    5 exp: NIL .

    $default  reduce using rule 5 (exp)


state 12

    0 $accept: program . $end

    $end  shift, and go to state 44


state 13

    1 program: exp .
   29 opexp: exp . PLUS exp
   30      | exp . MINUS exp
   31      | exp . TIMES exp
   32      | exp . DIVIDE exp
   33      | exp . EQ exp
   34      | exp . NEQ exp
   35      | exp . LT exp
   36      | exp . LE exp
   37      | exp . GT exp
   38      | exp . GE exp
   39      | exp . AND exp
   40      | exp . OR exp

    PLUS    shift, and go to state 45
    MINUS   shift, and go to state 46
    TIMES   shift, and go to state 47
    DIVIDE  shift, and go to state 48
    EQ      shift, and go to state 49
    NEQ     shift, and go to state 50
    LT      shift, and go to state 51
    LE      shift, and go to state 52
    GT      shift, and go to state 53
    GE      shift, and go to state 54
    AND     shift, and go to state 55
    OR      shift, and go to state 56

    $default  reduce using rule 1 (program)


state 14

    4 exp: lvalue .
   24 lvalue: lvalue . DOT ID
   25       | lvalue . LBRACK exp RBRACK
   48 assignexp: lvalue . ASSIGN exp

    LBRACK  shift, and go to state 57
    DOT     shift, and go to state 58
    ASSIGN  shift, and go to state 59

    $default  reduce using rule 4 (exp)


state 15

    8 exp: callexp .

    $default  reduce using rule 8 (exp)


state 16

    9 exp: opexp .

    $default  reduce using rule 9 (exp)


state 17

   10 exp: recordexp .

    $default  reduce using rule 10 (exp)


state 18

   11 exp: arrayexp .

    $default  reduce using rule 11 (exp)


state 19

   12 exp: assignexp .

    $default  reduce using rule 12 (exp)


state 20

   13 exp: ifexp .

    $default  reduce using rule 13 (exp)


state 21

   14 exp: whileexp .

    $default  reduce using rule 14 (exp)


state 22

   15 exp: forexp .

    $default  reduce using rule 15 (exp)


state 23

   17 exp: letexp .

    $default  reduce using rule 17 (exp)


state 24

   27 callexp: ID LPAREN . RPAREN
   28        | ID LPAREN . explist RPAREN

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    RPAREN  shift, and go to state 60
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp        go to state 61
    explist    go to state 62
    lvalue     go to state 14
    callexp    go to state 15
    opexp      go to state 16
    recordexp  go to state 17
    arrayexp   go to state 18
    assignexp  go to state 19
    ifexp      go to state 20
    whileexp   go to state 21
    forexp     go to state 22
    letexp     go to state 23


state 25

   26 lvalue: ID LBRACK . exp RBRACK
   47 arrayexp: ID LBRACK . exp RBRACK OF exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp        go to state 63
    lvalue     go to state 14
    callexp    go to state 15
    opexp      go to state 16
    recordexp  go to state 17
    arrayexp   go to state 18
    assignexp  go to state 19
    ifexp      go to state 20
    whileexp   go to state 21
    forexp     go to state 22
    letexp     go to state 23


state 26

   42 recordexp: ID LBRACE . rec RBRACE
   43          | ID LBRACE . RBRACE

    ID      shift, and go to state 64
    RBRACE  shift, and go to state 65

    rec      go to state 66
    rec_one  go to state 67


state 27

   18 exp: LPAREN RPAREN .

    $default  reduce using rule 18 (exp)


state 28

    2 exp: LPAREN exp . RPAREN
   19 expseq: exp . SEMICOLON expseq
   20       | exp .
   29 opexp: exp . PLUS exp
   30      | exp . MINUS exp
   31      | exp . TIMES exp
   32      | exp . DIVIDE exp
   33      | exp . EQ exp
   34      | exp . NEQ exp
   35      | exp . LT exp
   36      | exp . LE exp
   37      | exp . GT exp
   38      | exp . GE exp
   39      | exp . AND exp
   40      | exp . OR exp

    SEMICOLON  shift, and go to state 68
    RPAREN     shift, and go to state 69
    PLUS       shift, and go to state 45
    MINUS      shift, and go to state 46
    TIMES      shift, and go to state 47
    DIVIDE     shift, and go to state 48
    EQ         shift, and go to state 49
    NEQ        shift, and go to state 50
    LT         shift, and go to state 51
    LE         shift, and go to state 52
    GT         shift, and go to state 53
    GE         shift, and go to state 54
    AND        shift, and go to state 55
    OR         shift, and go to state 56

    RPAREN  [reduce using rule 20 (expseq)]


state 29

    3 exp: LPAREN expseq . RPAREN

    RPAREN  shift, and go to state 70


state 30

   29 opexp: exp . PLUS exp
   30      | exp . MINUS exp
   31      | exp . TIMES exp
   32      | exp . DIVIDE exp
   33      | exp . EQ exp
   34      | exp . NEQ exp
   35      | exp . LT exp
   36      | exp . LE exp
   37      | exp . GT exp
   38      | exp . GE exp
   39      | exp . AND exp
   40      | exp . OR exp
   41      | MINUS exp .

    $default  reduce using rule 41 (opexp)


state 31

   29 opexp: exp . PLUS exp
   30      | exp . MINUS exp
   31      | exp . TIMES exp
   32      | exp . DIVIDE exp
   33      | exp . EQ exp
   34      | exp . NEQ exp
   35      | exp . LT exp
   36      | exp . LE exp
   37      | exp . GT exp
   38      | exp . GE exp
   39      | exp . AND exp
   40      | exp . OR exp
   49 ifexp: IF exp . THEN exp ELSE exp
   50      | IF exp . THEN exp

    PLUS    shift, and go to state 45
    MINUS   shift, and go to state 46
    TIMES   shift, and go to state 47
    DIVIDE  shift, and go to state 48
    EQ      shift, and go to state 49
    NEQ     shift, and go to state 50
    LT      shift, and go to state 51
    LE      shift, and go to state 52
    GT      shift, and go to state 53
    GE      shift, and go to state 54
    AND     shift, and go to state 55
    OR      shift, and go to state 56
    THEN    shift, and go to state 71


state 32

   29 opexp: exp . PLUS exp
   30      | exp . MINUS exp
   31      | exp . TIMES exp
   32      | exp . DIVIDE exp
   33      | exp . EQ exp
   34      | exp . NEQ exp
   35      | exp . LT exp
   36      | exp . LE exp
   37      | exp . GT exp
   38      | exp . GE exp
   39      | exp . AND exp
   40      | exp . OR exp
   51 whileexp: WHILE exp . DO exp

    PLUS    shift, and go to state 45
    MINUS   shift, and go to state 46
    TIMES   shift, and go to state 47
    DIVIDE  shift, and go to state 48
    EQ      shift, and go to state 49
    NEQ     shift, and go to state 50
    LT      shift, and go to state 51
    LE      shift, and go to state 52
    GT      shift, and go to state 53
    GE      shift, and go to state 54
    AND     shift, and go to state 55
    OR      shift, and go to state 56
    DO      shift, and go to state 72


state 33

   52 forexp: FOR ID . ASSIGN exp TO exp DO exp

    ASSIGN  shift, and go to state 73


state 34

   63 fundec: FUNCTION . ID LPAREN tyfields RPAREN EQ exp
   64       | FUNCTION . ID LPAREN tyfields RPAREN COLON ID EQ exp

    ID  shift, and go to state 74


state 35

   59 vardec: VAR . ID ASSIGN exp
   60       | VAR . ID COLON ID ASSIGN exp

    ID  shift, and go to state 75


state 36

   67 tydec: TYPE . ID EQ ty

    ID  shift, and go to state 76


state 37

   53 letexp: LET decs . IN expseq END

    IN  shift, and go to state 77


state 38

   54 decs: dec . decs

    FUNCTION  shift, and go to state 34
    VAR       shift, and go to state 35
    TYPE      shift, and go to state 36

    $default  reduce using rule 55 (decs)

    decs     go to state 78
    dec      go to state 38
    vardec   go to state 39
    fundecs  go to state 40
    fundec   go to state 41
    tydecs   go to state 42
    tydec    go to state 43


state 39

   56 dec: vardec .

    $default  reduce using rule 56 (dec)


state 40

   57 dec: fundecs .

    $default  reduce using rule 57 (dec)


state 41

   61 fundecs: fundec . fundecs
   62        | fundec .

    FUNCTION  shift, and go to state 34

    FUNCTION  [reduce using rule 62 (fundecs)]
    $default  reduce using rule 62 (fundecs)

    fundecs  go to state 79
    fundec   go to state 41


state 42

   58 dec: tydecs .

    $default  reduce using rule 58 (dec)


state 43

   65 tydecs: tydec . tydecs
   66       | tydec .

    TYPE  shift, and go to state 36

    TYPE      [reduce using rule 66 (tydecs)]
    $default  reduce using rule 66 (tydecs)

    tydecs  go to state 80
    tydec   go to state 43


state 44

    0 $accept: program $end .

    $default  accept


state 45

   29 opexp: exp PLUS . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp        go to state 81
    lvalue     go to state 14
    callexp    go to state 15
    opexp      go to state 16
    recordexp  go to state 17
    arrayexp   go to state 18
    assignexp  go to state 19
    ifexp      go to state 20
    whileexp   go to state 21
    forexp     go to state 22
    letexp     go to state 23


state 46

   30 opexp: exp MINUS . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp        go to state 82
    lvalue     go to state 14
    callexp    go to state 15
    opexp      go to state 16
    recordexp  go to state 17
    arrayexp   go to state 18
    assignexp  go to state 19
    ifexp      go to state 20
    whileexp   go to state 21
    forexp     go to state 22
    letexp     go to state 23


state 47

   31 opexp: exp TIMES . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp        go to state 83
    lvalue     go to state 14
    callexp    go to state 15
    opexp      go to state 16
    recordexp  go to state 17
    arrayexp   go to state 18
    assignexp  go to state 19
    ifexp      go to state 20
    whileexp   go to state 21
    forexp     go to state 22
    letexp     go to state 23


state 48

   32 opexp: exp DIVIDE . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp        go to state 84
    lvalue     go to state 14
    callexp    go to state 15
    opexp      go to state 16
    recordexp  go to state 17
    arrayexp   go to state 18
    assignexp  go to state 19
    ifexp      go to state 20
    whileexp   go to state 21
    forexp     go to state 22
    letexp     go to state 23


state 49

   33 opexp: exp EQ . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp        go to state 85
    lvalue     go to state 14
    callexp    go to state 15
    opexp      go to state 16
    recordexp  go to state 17
    arrayexp   go to state 18
    assignexp  go to state 19
    ifexp      go to state 20
    whileexp   go to state 21
    forexp     go to state 22
    letexp     go to state 23


state 50

   34 opexp: exp NEQ . exp

    ID      shift, and go to state 1
    STRING  shift, and go to state 2
    INT     shift, and go to state 3
    LPAREN  shift, and go to state 4
    MINUS   shift, and go to state 5
    IF      shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    LET     shift, and go to state 9
    BREAK   shift, and go to state 10
    NIL     shift, and go to state 11

    exp        go to state 86
    lvalue     go to state 14
    callexp    go to state 15
    opexp      go to state 16
    recordexp  go to state 17
    arrayexp   go to state 18
    assignexp  go to state 19
    ifexp      go to state 20
    whileexp   go to state 21
    forexp     go to state 22
    letexp     go to state 23


state 51

   35 opexp: exp LT . exp
